# apex-trading-system-public

./: .gitignore  apex_log.txt  apex_project_dump.md  audit_project.py  main.py  pyproject.toml  run_backtest_test.py  test_tg.py
src/apex/application/: bootstrap.py  cli.py
src/apex/backtest/: __init__.py  backtest_engine.py  telegram_menu.py
src/apex/core/: config.py  events.py  exceptions.py  interfaces.py
src/apex/domain/: contracts.py  flow.py  knowledge.py  market.py  meta.py  regime.py  trading.py
src/apex/engines/: decision_engine.py  digital_twin.py  execution_engine.py  governance.py  kernel.py  meta_intelligence.py  portfolio_engine.py  probability_engine.py  risk_engine.py
src/apex/features/: evidence_engine.py  feature_store.py  ict_engine.py  indicators.py  liquidity_engine.py  order_flow_engine.py  primitives.py  regime_engine.py  session_filter.py  smt_engine.py  structure.py
src/apex/infrastructure/: data_validator.py
src/apex/interfaces/: telegram_bot.py
src/apex/monitoring/: contracts.py  (+3 more)
src/apex_trading_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_advanced_regime_structure.py  test_advanced_validation.py  test_core_foundation.py  test_data_platform.py  test_decision_engine.py  test_execution_engine.py  test_feature_platform.py  test_institutional_features.py  test_integration.py  test_kernel_integration.py  test_market_data_ws.py  test_meta_intelligence.py  test_observability.py  test_portfolio_engine.py  test_probability_engine.py  test_research_engine.py  test_risk_engine.py  test_security.py
(+89 files in other folders)
