[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-trading-system"
version = "1.0.0"
description = "APEX - Autonomous Probabilistic Execution eXchange"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "APEX Team"}]

dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "aiofiles>=23.2.0",
    "orjson>=3.9.0",
    "pytz>=2024.1",
    "python-dateutil>=2.8.2",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
apex = "apex.application.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
